--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "http": "0.0.1-security",
     "socket.io": "^3.0.4"
   }
 }
